k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-test
spec:
  selector:
    app: cicd-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
